[project]
authors = [{name = "Kaze Wong", email = "kazewong.physics@gmail.com"}]
dependencies = ["anthropic>=0.34.2,<0.35"]
description = "Add a short description here"
name = "pullish"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pullish = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python-dotenv = ">=1.0.1,<2"
ipython = ">=8.27.0,<9"
